# set-theory-prover

./: .ghc.environment.x86_64-linux-8.10.7  .gitignore  CHANGELOG.md  Command.hs  Main.hs  Parser.hs  README.md  TT.hs  att.cabal  examples.att  set-theory-prover.cabal
app/: AST.hs  Check.hs  Command.hs  Elab.hs  Errors.hs  Frontend.hs  Grammar.hs  Graph.hs  Infer.hs  Kernel.hs  Logic.hs  Main.hs  Notation.hs  Parser.hs  ParserInit.hs  ParserTypes.hs  PrettyPrint.hs  RunLua.hs  Showable.hs  Tests.hs  Tokenize.hs
app/Control/Monad/: Trace.hs
app/Kernel/: Check.hs  Eval-Old.hs  Eval.hs  Infer.hs  Logic.hs  ProofCheck.hs  Subst.hs  TypeCheck.hs  Types.hs
app/Testing/: Full.hs  Kernel.hs  Parser.hs
app/Testing/FullTests/: deserialize.lua  interface.lua  logic_f.lua  logic_s.lua  notation.lua  serialize.lua
diagrams/: diagrams.tex
doc/: att.tex  ind.bib  ind.tex
examples/: V.att  Vec.att  W.att  X.att  assoc.lua  classical.att  cli_api_test.lua  cli_test.lua  data.att  desc.att  error.lua  example.ast  export_test.lua  fin.att  import_test.lua  induction.att  inductives.att  logic.att  logic.lua  notations.lua  sets.lua  test.lua  utils.lua
src/: Command.hs  Main.hs  Parser.hs  TT.hs
