cabal-version:      2.4
name:               set-theory-prover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Baidicoot
maintainer:         aidanprattewart@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

executable set-theory-prover
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Kernel,
        Kernel.Subst,
        Kernel.Eval,
        Kernel.Types,
        Kernel.ProofCheck,
        Kernel.TypeCheck,
        Command

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        mtl ^>=2.2.2,
        containers ^>=0.6.5.1,
        text ^>=1.2.4.1,
        vector ^>=0.12.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
