cabal-version:      2.4
name:               set-theory-prover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Baidicoot
maintainer:         aidanprattewart@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

test-suite kernel-tests
    type:
        exitcode-stdio-1.0

    main-is:
        Testing/Kernel.hs
    
    other-modules:
        Kernel,
        Kernel.Subst,
        Kernel.Types,
        Kernel.Eval,
        Kernel.ProofCheck,
        Kernel.TypeCheck,
        Control.Monad.Trace
    
    build-depends:
        base >=4.14.0.0,
        mtl ^>=2.2.2,
        containers ^>=0.6.5.1,
        text ^>=1.2.4.1,
        vector ^>=0.12.3.1,
        hslua ^>=1.3.0.2,
        binary ^>=0.8.9.0,
        bytestring ^>=0.10.12.0,
        hspec ^>=2.9.2

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite parser-tests
    type:
        exitcode-stdio-1.0

    main-is:
        Testing/Parser.hs
    
    other-modules:
        Parser,
        ParserTypes,
        ParserInit,
        Notation,
        Elab,
        Kernel.Types,
        Tokenize,
        Control.Monad.Trace
    
    build-depends:
        base >=4.14.0.0,
        mtl ^>=2.2.2,
        containers ^>=0.6.5.1,
        text ^>=1.2.4.1,
        vector ^>=0.12.3.1,
        hslua ^>=1.3.0.2,
        binary ^>=0.8.9.0,
        bytestring ^>=0.10.12.0,
        hspec ^>=2.9.2

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite full-tests
    type:
        exitcode-stdio-1.0

    main-is:
        Testing/Full.hs
    
    other-modules:
        Kernel,
        Kernel.Subst,
        Kernel.Eval,
        Kernel.Types,
        Kernel.ProofCheck,
        Kernel.TypeCheck,
        Parser,
        ParserTypes,
        Tokenize,
        Elab,
        Frontend,
        ParserInit,
        Notation,
        Errors,
        Control.Monad.Trace,
        PrettyPrint,
        RunLua
    
    build-depends:
        base >=4.14.0.0,
        mtl ^>=2.2.2,
        containers ^>=0.6.5.1,
        text ^>=1.2.4.1,
        vector ^>=0.12.3.1,
        hslua ^>=1.3.0.2,
        binary ^>=0.8.9.0,
        bytestring ^>=0.10.12.0,
        hspec ^>=2.9.2

    hs-source-dirs:   app
    default-language: Haskell2010

executable set-theory-prover
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Kernel,
        Kernel.Subst,
        Kernel.Eval,
        Kernel.Types,
        Kernel.ProofCheck,
        Kernel.TypeCheck,
        Parser,
        ParserTypes,
        Tokenize,
        Elab,
        Frontend,
        ParserInit,
        Notation,
        Errors,
        Control.Monad.Trace,
        PrettyPrint,
        RunLua

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.0.0,
        mtl ^>=2.2.2,
        containers ^>=0.6.5.1,
        text ^>=1.2.4.1,
        vector ^>=0.12.3.1,
        hslua ^>=1.3.0.2,
        binary ^>=0.8.9.0,
        bytestring ^>=0.10.12.0
    hs-source-dirs:   app
    default-language: Haskell2010